@startuml
!include ../../IConfigurable.puml

set namespaceSeparator .


interface INavigator {
    {readonly} HasTarget : bool
    Target : Transform
    + Configure(NavigatorConfig) : void
    + Man(IMovableObject, RigidBody) : void
    + FixedUpdate() : void
}

abstract class Navigator {
}

Navigator --|> INavigator

class NavigatorConfig {
}

NavigatorConfig -|> Configurable
NavigatorConfig --* "1" Navigator

@enduml